# hatoml

./: .gitignore  .travis.yml  README.markdown  hatoml.cabal
Data/: HaTOML.hs
Data/HaTOML/: Encode.hs  Parser.hs  Types.hs
tests/: Main.hs
