name:           hatoml
version:        0.1
cabal-version:  >=1.8
category:       Text
stability:      experimental
copyright:      (c) 2013 Gregor Uhlenheuer
author:         Gregor Uhlenheuer <kongo2002@googlemail.com>
maintainer:     Gregor Uhlenheuer <kongo2002@googlemail.com>
homepage:       https://github.com/kongo2002/hatoml
bug-reports:    https://github.com/kongo2002/hatoml/issues
build-type:     Simple
synopsis:       TOML parsing library
description:    TOML parsing library

library
    build-depends:
        attoparsec >= 0.8.7,
        base == 4.*,
        bytestring,
        containers,
        old-locale,
        time

    exposed-modules:
        Data.HaTOML
        Data.HaTOML.Encode
        Data.HaTOML.Parser
        Data.HaTOML.Types

test-suite tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:        Main.hs

    ghc-options:
        -Wall -threaded

    build-depends:
        HUnit,
        test-framework,
        test-framework-hunit,
        hatoml,
        attoparsec,
        base,
        bytestring,
        containers,
        old-locale,
        time

source-repository head
    type:       git
    location:   git://github.com/kongo2002/hatoml.git
